--- a/TP_3/.project
+++ b/TP_3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TP_[3]</name>
+	<name>TP_[3] Bottaro Juan Manuel}</name>
 	<comment></comment>
 	<projects>
 	</projects>
